--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -7,6 +7,6 @@ export DNS_CLUSTER_QUERY="${FLY_APP_NAME}.internal"
 export RELEASE_DISTRIBUTION="name"
 export RELEASE_NODE="${FLY_APP_NAME}-${FLY_IMAGE_REF##*-}@${FLY_PRIVATE_IP}"
 ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
-#export RELEASE_DISTRIBUTION=name
-#export RELEASE_NODE=$FLY_APP_NAME@$ip
+export RELEASE_DISTRIBUTION=name
+export RELEASE_NODE=$FLY_APP_NAME@$ip
 
